src/objects/Apttus_Config2__ProductDefaultRule__c.object
<CustomObject>
    <description>Represents a rule to default products, quantity and term</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the rule is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BusinessObject__c</fullName>
        <description>The business object which provides the context for the rule</description>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__UseType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus_Config2__ProductConfiguration__c</fullName>
                    <default>true</default>
                    <label>Apttus_Config2__ProductConfiguration__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CriteriaFieldNames__c</fullName>
        <description>The list of field names used in the rule criteria</description>
        <label>Criteria Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Criteria__c</fullName>
        <description>The rule criteria specification</description>
        <label>Rule Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the rule</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EditCriteria__c</fullName>
        <description>&quot;Edit Criteria&quot; custom button</description>
        <formula>IF (True, HYPERLINK(&quot;apex/Apttus_Config2__ProductDefaultRuleCriteriaEdit?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_Config2__Button_EditCriteria&quot;, &quot;Edit Criteria&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The rule effective date. The rule becomes effective on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The rule expiration date. The rule becomes ineffective after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FilterLogic__c</fullName>
        <description>The default filter logic expression</description>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteriaCompOper__c</fullName>
        <description>The rule inclusion criteria comparison operator</description>
        <label>Inclusion Criteria Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteriaFieldName__c</fullName>
        <description>The rule inclusion criteria field</description>
        <label>Inclusion Criteria Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteriaFieldValue__c</fullName>
        <description>The rule inclusion criteria value</description>
        <label>Inclusion Criteria Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberOfFilters__c</fullName>
        <description>Indicates the number of filters associated with the default rule</description>
        <label>Number Of Filters</label>
        <summaryForeignKey>Apttus_Config2__ProductDefaultRuleFilter__c.Apttus_Config2__ProductDefaultRuleId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberOfValues__c</fullName>
        <description>Indicates the number of values associated with the default rule</description>
        <label>Number Of Values</label>
        <summaryForeignKey>Apttus_Config2__ProductDefaultValue__c.Apttus_Config2__ProductDefaultRuleId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Default Rules</relationshipLabel>
        <relationshipName>ProductDefaultRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The rule evaluation sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StopProcessingMoreRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to prevent subsequent rules from processing</description>
        <label>Stop Processing More Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseType__c</fullName>
        <description>The rule use type</description>
        <label>Application Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>Quote/Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Default Rule</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Default Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>